@@ -1,2 +1,3 @@
  PKG_LIBS =  $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
-# PKG_CFLAGS = -Wall -pedantic 
+#PKG_CFLAGS = -Wall -pedantic -g
+## `#' out previous line for release
