@@ -1,5 +1,17 @@
 1.3-22
 
+* Cheap but unneccesary code added to gdi.c and magic.c to stop 
+  inappropriate uninitialized variable warnings from some compilers.
+
+* Bad bug in gam.fit3 fixed. Prior weights of zero were not handled 
+  correctly - prior weight vector should have been subsetted before
+  gdi call, but this didn't happen. Result was infinite derivatives
+  and fit failure. fixed.
+
+* Related bug in gam.fit3: dropped observations not handled correctly 
+  in deviance calculation, which can result in inappropriate step 
+  halving. fixed.
+
 * inner loop 3 in gam.fit2 and gam.fit3 modified so that step halving 
   continues until penalized deviance is at worst non-increasing. 
 
